Add CoronaVirus Info

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <meta property="og:image:width" content="1191">
   <meta property="og:image:height" content="1455">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/solid.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/regular.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/brands.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/fontawesome.css">
   <link rel="stylesheet" href="./css/main.css">
@@ -50,6 +51,16 @@
       <li><a href="javascript:alert('Sike! You thought')"><i class="fab fa-reddit"></i></a></li>
     </ul>
   </div>
+
+  <div class="info">
+    <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/advice-for-public">
+      <b><i class="fas fa-exclamation-triangle"></i> Covid-19 Threat! <i class="fas fa-exclamation-triangle"></i></b>
+      <p><i class="far fa-hand-point-right"></i> Click here to go to the WHO website <i class="far fa-hand-point-left"></i></p>
+      <img src="assets/corona-hand-wash.svg" alt="Wash Your Hands!" height="128" width="128">
+      <img src="assets/corona-virus.svg" alt="Wash Your Hands!" height="128" width="128">
+    </a>
+  </div>
+
 </body>
 
 </html>
