--- a/index.html
+++ b/index.html
@@ -4,16 +4,28 @@
   <title>Diogo's Website</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta name="description" content="Diogo's website - homepage">
+  <meta name="description" content="Diogo Fernandes">
   <meta name="author" content="Diogo Fernandes">
   <meta name="keywords" content="Diogo S.C. Fernandes, Diogo Fernandes, Diogo Sousa Cabral Fernandes, diogoscf, diogo.scf, diogo_scf, Diogo, Fernandes">
-  <meta property="og:title" content="Diogo's Website">
+
+  <!--Social Media stuff -->
+  <meta property="og:title" content="Diogo Fernandes">
+  <meta property="og:type" content="website">
   <meta property="og:site_name" content="diogos.cf">
   <meta property="og:url" content="https://diogos.cf/">
-  <meta property="og:description" content="Diogo's personal website, containing his social media, about info and projects">
-  <meta property="og:image" content="https://diogos.cf/assets/me_blue_bg.png">
-  <meta property="og:image:width" content="1191">
-  <meta property="og:image:height" content="1455">
+  <meta property="og:description" content="I'm Diogo, a 16 year old science lover, programmer, and meme connoisseur">
+  <meta property="og:locale" content="en_GB">
+  <meta property="og:image" content="https://diogos.cf/assets/me-blue-bg.png">
+  <meta property="og:image:width" content="500">
+  <meta property="og:image:height" content="611">
+  <meta property="og:image:alt" content="https://diogos.cf/assets/me-blue-bg.png">
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://diogos.cf">
+  <meta property="twitter:title" content="Diogo Fernandes">
+  <meta property="twitter:description" content="I'm Diogo, a 16 year old science lover, programmer, and meme connoisseur">
+  <meta property="twitter:image" content="https://diogos.cf/assets/me-blue-bg.png">
+  <meta name="twitter:creator" content="@diogo_scf">
+
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/solid.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/regular.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/brands.css">
@@ -25,7 +37,7 @@
 <body>
   <div class="top">
     <div class="mypic">
-      <img src="./assets/me_blue_bg.png" alt="Picture of me, on a blue background">
+      <img src="./assets/me-coding.png" alt="Picture of me, on a code background">
     </div>
     <h1>Diogo Fernandes</h1>
     <h2>Science lover, programmer, meme connoisseur</h2>
@@ -41,7 +53,7 @@
   <div class="bottom">
     <p class="stalk-text">I am easily stalkable. You can find most of my social media here:</p>
     <ul class="stalk-list">
-      <li><a href="mailto:diogo.scf2003@gmail.com" title="diogo.scf2003@gmail.com"><i class="fas fa-envelope"></i></a></li>
+      <li><a href="mailto:diogo@diogos.cf" title="diogo@diogos.cf"><i class="fas fa-envelope"></i></a></li>
       <li><a href="https://github.com/diogoscf" title="diogoscf"><i class="fab fa-github"></i></a></li>
       <li><a href="https://instagram.com/diogo.scf" title="@diogoscf"><i class="fab fa-instagram"></i></a></li>
       <li><a href="https://t.me/diogoscf" title="@diogoscf"><i class="fab fa-telegram"></i></a></li>
@@ -53,12 +65,7 @@
   </div>
 
   <div class="info">
-    <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/advice-for-public">
-      <b><i class="fas fa-exclamation-triangle"></i> Covid-19 Threat! <i class="fas fa-exclamation-triangle"></i></b>
-      <p><i class="far fa-hand-point-right"></i> Click here to go to the WHO website <i class="far fa-hand-point-left"></i></p>
-      <img src="assets/corona-hand-wash.svg" alt="Wash Your Hands!" height="128" width="128">
-      <img src="assets/corona-virus.svg" alt="Wash Your Hands!" height="128" width="128">
-    </a>
+    <!--Temporary info here-->
   </div>
 
 </body>
