--- a/404.html
+++ b/404.html
@@ -4,16 +4,16 @@
   <title>Diogo's Website - 404</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta name="description" content="Diogo's website - homepage">
+  <meta name="description" content="Diogo's website - 404">
   <meta name="author" content="Diogo Fernandes">
   <meta name="keywords" content="Diogo S.C. Fernandes, Diogo Fernandes, Diogo Sousa Cabral Fernandes, diogoscf, diogo.scf, diogo_scf, Diogo, Fernandes">
   <meta property="og:title" content="Diogo's Website - 404 page">
   <meta property="og:site_name" content="diogos.cf">
   <meta property="og:url" content="https://diogos.cf/">
-  <meta property="og:description" content="Diogo's personal website, containing his social media, about info and projects">
-  <meta property="og:image" content="https://diogos.cf/assets/me_blue_bg.png">
-  <meta property="og:image:width" content="1191">
-  <meta property="og:image:height" content="1455">
+  <meta property="og:description" content="This page doesn't seem to exist...">
+  <meta property="og:image" content="https://diogos.cf/assets/glitched-me.png">
+  <meta property="og:image:width" content="500">
+  <meta property="og:image:height" content="611">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/solid.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/regular.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/brands.css">
@@ -24,8 +24,11 @@
 
 <body>
   <div class="top">
+    <div class="mypic">
+      <img src="./assets/glitched-me.png" alt="Glitched picture">
+    </div>
     <h1 class="four-o-four">404</h1>
-    <h2>This page doesn't seem to exist</h2>
+    <h2>This page doesn't seem to exist<br>It may have been moved or deleted</h2>
     <div class="nav">
       <a href="./index.html">
         <div class="btn">Go home</div>
