--- a/about/index.html
+++ b/about/index.html
@@ -11,7 +11,9 @@
   <meta property="og:site_name" content="diogos.cf">
   <meta property="og:url" content="https://diogos.cf/about/">
   <meta property="og:description" content="Diogo's about info. Contains personal info, as well as programming skills and achievements">
-  <meta property="og:image" content="./assets/me_blue_bg.png">
+  <meta property="og:image" content="https://diogos.cf/assets/me-blue-bg.png">
+  <meta property="og:image:width" content="500">
+  <meta property="og:image:height" content="611">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/solid.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/brands.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/fontawesome.css">
