More styling improvements

--- a/about/index.html
+++ b/about/index.html
@@ -25,7 +25,7 @@
 
 <body>
   <div class="top about-top">
-    <h1>ABOUT ME</h1>
+    <h1 class="space-under">ABOUT ME</h1>
     <div class="nav">
       <a href=".."><div class="btn">HOME</div></a>
     </div>
