--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <img src="./assets/me-coding.png" alt="Picture of me, on a code background">
     </div>
     <h1>Diogo Fernandes</h1>
-    <h2>Science lover, programmer, meme connoisseur</h2>
+    <h2 class="space-under">Science lover, programmer, meme connoisseur</h2>
     <div class="nav">
       <a href="./about">
         <div class="btn">About</div>
