--- a/404.html
+++ b/404.html
@@ -28,7 +28,7 @@
       <img src="./assets/glitched-me.png" alt="Glitched picture">
     </div>
     <h1 class="four-o-four">404</h1>
-    <h2>This page doesn't seem to exist<br>It may have been moved or deleted</h2>
+    <h2 class="space-under">This page doesn't seem to exist<br>It may have been moved or deleted</h2>
     <div class="nav">
       <a href="./index.html">
         <div class="btn">Go home</div>
