--- a/404.html
+++ b/404.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/fontawesome.css">
   <link rel="stylesheet" href="./css/main.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
+  <script src="./js/theme.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -35,5 +36,11 @@
       </a>
     </div>
   </div>
+
+  <label class="switch">
+    <img src="./assets/sunmoon.svg">
+    <input type="checkbox" id="theme-switch">
+    <span class="slider"></span>
+  </label>
 
 </body>
