--- a/about/index.html
+++ b/about/index.html
@@ -21,6 +21,7 @@
   <link rel="stylesheet" href="../css/main.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
   <script src="../js/achievements.js" type="text/javascript"></script>
+  <script src="../js/theme.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -57,6 +58,12 @@
     <h2>Achievements</h2>
     <div class="achievements"></div>
   </div>
+
+  <label class="switch">
+    <img src="../assets/sunmoon.svg">
+    <input type="checkbox" id="theme-switch">
+    <span class="slider"></span>
+  </label>
 </body>
 
 </html>
