--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/fontawesome.css">
   <link rel="stylesheet" href="./css/main.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
+  <script src="./js/theme.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -64,9 +65,11 @@
     </ul>
   </div>
 
-  <div class="info">
-    <!--Temporary info here-->
-  </div>
+  <label class="switch">
+    <img src="./assets/sunmoon.svg">
+    <input type="checkbox" id="theme-switch">
+    <span class="slider"></span>
+  </label>
 
 </body>
 
