--- a/404.html
+++ b/404.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/brands.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/fontawesome.css">
   <link rel="stylesheet" href="./css/main.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="./js/theme.js" type="text/javascript"></script>
 </head>
 
