--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   <link rel="stylesheet" href="./css/main.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="./js/theme.js" type="text/javascript"></script>
+  <script src="./js/memes.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -61,7 +62,7 @@
       <li><a href="https://snapchat.com/add/diogo_scf" title="diogo_scf"><i class="fab fa-snapchat"></i></a></li>
       <li><a href="https://facebook.com/diogoscf" title="@diogoscf"><i class="fab fa-facebook"></i></a></li>
       <li><a href="https://twitter.com/diogo_scf" title="@diogo_scf"><i class="fab fa-twitter"></i></a></li>
-      <li><a href="javascript:alert('Sike! You thought')"><i class="fab fa-reddit"></i></a></li>
+      <li><a href="javascript:void(0)" class="rickroll"><i class="fab fa-reddit"></i></a></li>
     </ul>
   </div>
 
