--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			"headline": "Diogo’s Website",
 			"sameAs": ["https://www.instagram.com/diogo.scf", "https://www.facebook.com/diogoscf", "https://www.snapchat.com/add/diogo_scf", "https://twitter.com/diogo_scf/"],
 			"name": "Diogo Fernandes",
-			"description": "Science lover, programmer, meme connoisseur",
+			"description": "Future aerospace engineer, meme connoisseur",
 			"@context": "https://schema.org"
 		}
 	</script>
@@ -47,7 +47,7 @@
 			<header>
 				<span class="avatar"><img src="images/avatar.png" alt="Picture of me" /></span>
 				<h1>Diogo S.C. Fernandes</h1>
-				<p>Science lover, programmer, meme connoisseur</p>
+				<p>Future aerospace engineer, meme connoisseur</p>
 			</header>
 
 			<footer>
