--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					<li><a href="https://instagram.com/diogo.scf/" class="icon brands fa-instagram">Instagram</a></li>
 					<li><a href="https://twitter.com/diogo_scf/" class="icon brands fa-twitter">Twitter</a></li>
 					<li><a href="https://t.me/diogoscf" class="icon brands fa-telegram-plane">Telegram</a></li>
-					<li><a href="https://snapchat.com/add/diogo_scf" class="icon brands fa-snapchat-ghost">Snapchat</a></li>
+					<li><a href="https://snapchat.com/add/diogoscf" class="icon brands fa-snapchat-ghost">Snapchat</a></li>
 					<li><a href="https://facebook.com/diogoscf/" class="icon brands fa-facebook-f">Facebook</a></li>
 					<li><a href="#" class="icon brands fa-reddit-alien" onclick="window.open('https://www.youtube.com/watch?v=dQw4w9WgXcQ','_self')">Reddit</a></li>
 				</ul>
