--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=6.0, minimum-scale=1.0">
 	<meta property="og:title" content="Diogo’s Website">
 	<meta property="og:locale" content="en_GB" />
-	<meta name="description" content="Science lover, programmer, meme connoisseur" />
-	<meta property="og:description" content="Science lover, programmer, meme connoisseur" />
+	<meta name="description" content="Aerospace engineering student, meme connoisseur" />
+	<meta property="og:description" content="Aerospace engineering student, meme connoisseur" />
 	<link rel="canonical" href="https://diogos.cf/">
 	<meta property="og:url" content="https://diogos.cf/" />
 	<meta property="og:site_name" content="Diogo Fernandes" />
@@ -29,7 +29,7 @@
 			"headline": "Diogo’s Website",
 			"sameAs": ["https://www.instagram.com/diogo.scf", "https://www.facebook.com/diogoscf", "https://www.snapchat.com/add/diogo_scf", "https://twitter.com/diogo_scf/"],
 			"name": "Diogo Fernandes",
-			"description": "Future aerospace engineer, meme connoisseur",
+			"description": "Aerospace engineering student, meme connoisseur",
 			"@context": "https://schema.org"
 		}
 	</script>
