--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=6.0, minimum-scale=1.0">
 	<meta property="og:title" content="Diogo’s Website">
 	<meta property="og:locale" content="en_GB" />
-	<meta name="description" content="Aerospace engineering student, meme connoisseur" />
-	<meta property="og:description" content="Aerospace engineering student, meme connoisseur" />
-	<link rel="canonical" href="https://diogos.cf/">
-	<meta property="og:url" content="https://diogos.cf/" />
+	<meta name="description" content="Aerospace Engineering student at TU Delft" />
+	<meta property="og:description" content="Aerospace Engineering student at TU Delft" />
+	<link rel="canonical" href="https://diogoscf.eu/">
+	<meta property="og:url" content="https://diogoscf.eu/" />
 	<meta property="og:site_name" content="Diogo Fernandes" />
 	<meta name="twitter:card" content="summary">
 	<meta property="twitter:title" content="Diogo’s Website">
@@ -22,14 +22,14 @@
 				"@type": "Organization",
 				"logo": {
 					"@type": "ImageObject",
-					"url": "https://diogos.cf/images/avatar.png"
+					"url": "https://diogoscf.eu/images/avatar.png"
 				}
 			},
-			"url": "https://diogos.cf/",
+			"url": "https://diogoscf.eu/",
 			"headline": "Diogo’s Website",
-			"sameAs": ["https://www.instagram.com/diogo.scf", "https://www.facebook.com/diogoscf", "https://www.snapchat.com/add/diogo_scf", "https://twitter.com/diogo_scf/"],
+			"sameAs": ["https://www.instagram.com/diogo.scf", "https://www.facebook.com/diogoscf", "https://www.snapchat.com/add/diogoscf", "https://twitter.com/diogo_scf/"],
 			"name": "Diogo Fernandes",
-			"description": "Aerospace engineering student, meme connoisseur",
+			"description": "Aerospace Engineering student at TU Delft",
 			"@context": "https://schema.org"
 		}
 	</script>
@@ -47,19 +47,20 @@
 			<header>
 				<span class="avatar"><img src="images/avatar.png" alt="Picture of me" /></span>
 				<h1>Diogo S.C. Fernandes</h1>
-				<p>Future aerospace engineer, meme connoisseur</p>
+				<p>Aerospace Engineering student at TU Delft</p>
 			</header>
 
 			<footer>
 				<ul class="icons">
-					<li><a href="mailto:diogo@diogos.cf" class="icon solid fa-envelope">Mail</a></li>
+					<li><a href="mailto:diogo@diogoscf.eu" class="icon solid fa-envelope">Mail</a></li>
 					<li><a href="https://github.com/diogoscf/" class="icon brands fa-github">GitHub</a></li>
 					<li><a href="https://instagram.com/diogo.scf/" class="icon brands fa-instagram">Instagram</a></li>
 					<li><a href="https://twitter.com/diogo_scf/" class="icon brands fa-twitter">Twitter</a></li>
 					<li><a href="https://t.me/diogoscf" class="icon brands fa-telegram-plane">Telegram</a></li>
 					<li><a href="https://snapchat.com/add/diogoscf" class="icon brands fa-snapchat-ghost">Snapchat</a></li>
 					<li><a href="https://facebook.com/diogoscf/" class="icon brands fa-facebook-f">Facebook</a></li>
-					<li><a href="#" class="icon brands fa-reddit-alien" onclick="window.open('https://www.youtube.com/watch?v=dQw4w9WgXcQ','_self')">Reddit</a></li>
+					<li><a href="https://linkeding.com/diogo-sc-fernandes/" class="icon brands fa-linkedin-in">LinkedIn</a></li>
+					<!--li><a href="#" class="icon brands fa-reddit-alien" onclick="window.open('https://www.youtube.com/watch?v=dQw4w9WgXcQ','_self')">Reddit</a></li-->
 				</ul>
 			</footer>
 		</section>
