--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<li><a href="https://t.me/diogoscf" class="icon brands fa-telegram-plane">Telegram</a></li>
 					<li><a href="https://snapchat.com/add/diogoscf" class="icon brands fa-snapchat-ghost">Snapchat</a></li>
 					<li><a href="https://facebook.com/diogoscf/" class="icon brands fa-facebook-f">Facebook</a></li>
-					<li><a href="https://linkeding.com/diogo-sc-fernandes/" class="icon brands fa-linkedin-in">LinkedIn</a></li>
+					<li><a href="https://linkedin.com/in/diogo-sc-fernandes/" class="icon brands fa-linkedin-in">LinkedIn</a></li>
 					<!--li><a href="#" class="icon brands fa-reddit-alien" onclick="window.open('https://www.youtube.com/watch?v=dQw4w9WgXcQ','_self')">Reddit</a></li-->
 				</ul>
 			</footer>
