--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			<header>
 				<span class="avatar"><img src="images/avatar.png" alt="Picture of me" /></span>
 				<h1>Diogo S.C. Fernandes</h1>
-				<p>Aerospace Engineering student at TU Delft</p>
+				<p>FEM Calculator</p>
 			</header>
 
 			<footer>
