--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			<header>
 				<span class="avatar"><img src="images/avatar.png" alt="Picture of me" /></span>
 				<h1>Diogo S.C. Fernandes</h1>
-				<p>FEM Calculator</p>
+				<p>Aerospace Engineering student at TU Delft</p>
 			</header>
 
 			<footer>
@@ -57,9 +57,9 @@
 					<li><a href="https://instagram.com/diogo.scf/" class="icon brands fa-instagram">Instagram</a></li>
 					<li><a href="https://twitter.com/diogo_scf/" class="icon brands fa-twitter">Twitter</a></li>
 					<li><a href="https://t.me/diogoscf" class="icon brands fa-telegram-plane">Telegram</a></li>
-					<li><a href="https://snapchat.com/add/diogoscf" class="icon brands fa-snapchat-ghost">Snapchat</a></li>
 					<li><a href="https://facebook.com/diogoscf/" class="icon brands fa-facebook-f">Facebook</a></li>
 					<li><a href="https://linkedin.com/in/diogo-sc-fernandes/" class="icon brands fa-linkedin-in">LinkedIn</a></li>
+					<li><a href ="#" class="icon brands fa-snapchat-ghost" onclick="window.open('https://www.youtube.com/watch?v=dQw4w9WgXcQ','_self')">Snapchat</a></li>
 					<!--li><a href="#" class="icon brands fa-reddit-alien" onclick="window.open('https://www.youtube.com/watch?v=dQw4w9WgXcQ','_self')">Reddit</a></li-->
 				</ul>
 			</footer>
